<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.im.nothuman.talkingMorse.activity_select_time">

    <include
        android:id="@+id/select_time"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/select_time"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/from"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/to"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:soundEffectsEnabled="true"
                android:splitMotionEvents="false"
                android:timePickerMode="spinner" />

            <TimePicker
                android:id="@+id/timePicker2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:soundEffectsEnabled="true"
                android:splitMotionEvents="false"
                android:timePickerMode="spinner" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/linear1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="TITLE"
            android:inputType="textPersonName"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

        <EditText
            android:id="@+id/desription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="DESCRIPTION"
            android:inputType="textMultiLine"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="AVAILABLE"
                android:textColor="@android:color/holo_green_light"
                tools:backgroundTint="@color/colorPrimary" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="BUSY"
                android:textColor="@android:color/holo_red_light" />
        </RadioGroup>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#fff"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/continue1"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

</RelativeLayout>
